--- a/index.html
+++ b/index.html
@@ -136,12 +136,49 @@
 
         <div>
             <h4>Education</h4>
+
+            <div class="card">
+                <div class="card-header">
+                    UCLA Extension Full Stack Web Development Bootcamp
+                </div>
+
+                <div class="card-body">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-item">Made me a highly skilled developmer in the MERN Stack</li>
+                        <li class="list-item">Team Lead for Three Full Stack Web Application Projects</li>
+                        <li class="list-item">Also very comfortable with MySql, jQuery, Bootstrap</li>
+                        <li class="list-item">Hired on as a Teaching Assistant after the class</li>
+                    </ul>
+                </div>
+                <div class="card-footer">
+                    May 2018 - August 2018
+                </div>
+            </div>
         </div>
     </div>
 
 
     <div id="projects">
         <h3>Projects</h3>
+        <div>
+            <h3><a href="https://rift-classroom.herokuapp.com/classroom">Rift - a portal connecting students and teachers</a></h3>
+            <img class="projectimage" src="assets/images/rift.JPG">
+            <p><a href="https://github.com/poweredhoward/rift">See the repo</a></p>
+        </div>
+
+        <div>
+            <h3><a href="https://poweredhoward.github.io/yelp-help/">Yelp Help - Extending the functionality of Yelp</a></h3>
+            <img class="projectimage" src="assets/images/yelphelp.JPG">
+            <p><a href="https://github.com/poweredhoward/yelp-help">See the repo</a></p>
+
+        </div>
+
+        <div>
+            <h3><a href="https://group-activity-planner.herokuapp.com/">The Group Planner - Make plans with your friends</a></h3>
+            <img class="projectimage" src="assets/images/groupplanner.JPG">
+            <p><a href="https://github.com/poweredhoward/group-planner">See the repo</a></p>
+
+        </div>
     </div>
 
 
@@ -152,6 +189,8 @@
 
     <div id="employers">
         <h3>For recruiters and employers</h3>
+        <div class="container" id="resume"></div>
+
     </div>
 
     
@@ -161,5 +200,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script src="assets/javascript/pdfobject.js"></script>
+    <script>PDFObject.embed("assets/ResumeMatthewHoward.pdf", "#resume");</script>
 </body>
 </html>
