--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <title></title>
     <!-- bootstrap -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -15,6 +14,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css"/>
     <!-- local js -->
     <script src="assets/javascript/app.js"></script>
+
+    <title>Matthew Howard</title>
 </head>
 <body>
     <div class="jumbotron">
@@ -27,10 +28,10 @@
 
     <nav id="nav">
         <ul class="nav">
-            <li class="nav-item" id="li-about"><a class="nav-link" href="#about">About Me</a></li>
-            <li class="nav-item" id="li-projects"><a class="nav-link" href="#projects">Projects</a></li>
-            <li class="nav-item" id="li-contact"><a class="nav-link" href="#contact">Contact</a></li>
-           <li class="nav-item" id="li-employers"> <a class="nav-link" href="#employers">Recruiters/Employers</a></li>
+            <li class="nav-item" id="li-about"><a class="nav-link" href="index.html">About Me</a></li>
+            <li class="nav-item" id="li-projects"><a class="nav-link" href="projects.html">Projects</a></li>
+            <li class="nav-item" id="li-contact"><a class="nav-link" href="contact.html">Contact</a></li>
+           <li class="nav-item" id="li-employers"> <a class="nav-link" href="employers.html">Recruiters/Employers</a></li>
         </ul>
     </nav>
     
@@ -47,30 +48,30 @@
         <div>
             <h4>Skills</h4>
             <ul class="list-group">
-                    <li class="list-group-item">Javascript</li>
-                    <li class="list-group-item">HTML5</li>
-                    <li class="list-group-item">CSS3</li>
-                    <li class="list-group-item">Bootstrap</li>
-                    <li class="list-group-item">jQuery</li>
-                    <li class="list-group-item">React.js</li>
-                    <li class="list-group-item">Node.js</li>
-                    <li class="list-group-item">Express</li>
-                    <li class="list-group-item">MongoDB and Mongoose</li>
-                    <li class="list-group-item">MySQL and Sequelize</li>
-                    <li class="list-group-item">Python</li>
-                    <li class="list-group-item">Flask</li>
-                    <li class="list-group-item">Java</li>
-                    <li class="list-group-item">REST</li>
-                    <li class="list-group-item">Building/Consuming APIs</li>
-                    <li class="list-group-item">AWS</li>
-                    <li class="list-group-item">Git</li>
-                    <li class="list-group-item">Linux</li>
-                    <li class="list-group-item">Data Structures</li>
-                    <li class="list-group-item">Algorithms</li>
-                    <li class="list-group-item">Relational DB Management</li>
-                    <li class="list-group-item">Wordpress</li>
-                    <li class="list-group-item">Kubernetes</li>
-                    <li class="list-group-item">Docker</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/javascript.png"> Javascript</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/html.png"> HTML5</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/css.svg"> CSS3</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/bootstrap.png"> Bootstrap</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/jquery.png"> jQuery</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/react.png"> React.js</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/node.png"> Node.js</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/express.png"> Express</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/mongo.png"> MongoDB and Mongoose</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/mysql.png"> MySQL and Sequelize</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/python.jpg"> Python</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/flask.png"> Flask</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/java.png"> Java</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/rest.png"> REST</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/api.png"> Building/Consuming APIs</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/aws.png"> AWS</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/git.png"> Git</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/linux.jpg"> Linux</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/datastructures.png"> Data Structures</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/algorithm.png"> Algorithms</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/rdbms.jpg"> Relational DB Management</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/wordpress.png"> Wordpress</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/kubernetes.png"> Kubernetes</li>
+                    <li class="list-group-item"><img class="logo" src="assets/images/docker.jpg"> Docker</li>
             </ul>
         </div>
 
@@ -122,7 +123,7 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Designed and built static websites for clients</li>
                     <li class="list-group-item">Delivered websites up to clients' standards</li>
-                    <li class="list-group-item">Levered Wordpress and built from scratch</li>
+                    <li class="list-group-item">Leveraged Wordpress and built from scratch</li>
                   </ul>
             </div>
             <div class="card-footer">
@@ -130,9 +131,6 @@
             </div>
         </div>
 
-    </div>
-
-    </div>
 
         <div>
             <h4>Education</h4>
@@ -157,43 +155,6 @@
         </div>
     </div>
 
-
-    <div id="projects">
-        <h3>Projects</h3>
-        <div>
-            <h3><a href="https://rift-classroom.herokuapp.com/classroom">Rift - a portal connecting students and teachers</a></h3>
-            <img class="projectimage" src="assets/images/rift.JPG">
-            <p><a href="https://github.com/poweredhoward/rift">See the repo</a></p>
-        </div>
-
-        <div>
-            <h3><a href="https://poweredhoward.github.io/yelp-help/">Yelp Help - Extending the functionality of Yelp</a></h3>
-            <img class="projectimage" src="assets/images/yelphelp.JPG">
-            <p><a href="https://github.com/poweredhoward/yelp-help">See the repo</a></p>
-
-        </div>
-
-        <div>
-            <h3><a href="https://group-activity-planner.herokuapp.com/">The Group Planner - Make plans with your friends</a></h3>
-            <img class="projectimage" src="assets/images/groupplanner.JPG">
-            <p><a href="https://github.com/poweredhoward/group-planner">See the repo</a></p>
-
-        </div>
-    </div>
-
-
-    <div id="contact">
-        <h3>Contact Me!</h3>
-    </div>
-
-
-    <div id="employers">
-        <h3>For recruiters and employers</h3>
-        <div class="container" id="resume"></div>
-
-    </div>
-
-    
 
  <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
