Added entries, better headings

--- a/contact.html
+++ b/contact.html
@@ -18,15 +18,10 @@
     <title>Matthew Howard</title>
 </head>
 <body>
-    <div class="jumbotron">
-        <h1>Matthew Howard</h1>
-        <h2>Full Stack Software Developer</h2>
-    </div>
-    
 
     <!-- <a href="#nav"><button>Enter Site</button></a> -->
 
-    <nav id="nav">
+    <nav id="nav" class="sticky-top">
         <ul class="nav">
             <li class="nav-item" id="li-about"><a class="nav-link" href="index.html">About Me</a></li>
             <li class="nav-item" id="li-projects"><a class="nav-link" href="projects.html">Projects</a></li>
