--- a/projects.html
+++ b/projects.html
@@ -17,16 +17,11 @@
 
     <title>Matthew Howard</title>
 </head>
-<body>
-    <div class="jumbotron">
-        <h1>Matthew Howard</h1>
-        <h2>Full Stack Software Developer</h2>
-    </div>
-    
+<body> 
 
     <!-- <a href="#nav"><button>Enter Site</button></a> -->
 
-    <nav id="nav">
+    <nav id="nav" class="sticky-top">
         <ul class="nav">
             <li class="nav-item" id="li-about"><a class="nav-link" href="index.html">About Me</a></li>
             <li class="nav-item" id="li-projects"><a class="nav-link" href="projects.html">Projects</a></li>
@@ -38,7 +33,7 @@
    
 
 
-    <div id="projects">
+    <div id="projects" class="container">
         <h3>Projects</h3>
         <div>
             <h3><a href="https://rift-classroom.herokuapp.com/classroom">Rift - a portal connecting students and teachers</a></h3>
