--- a/contact.html
+++ b/contact.html
@@ -21,18 +21,30 @@
 
     <!-- <a href="#nav"><button>Enter Site</button></a> -->
 
-    <nav id="nav" class="sticky-top">
-        <ul class="nav">
-            <li class="nav-item" id="li-about"><a class="nav-link" href="index.html">About Me</a></li>
-            <li class="nav-item" id="li-projects"><a class="nav-link" href="projects.html">Projects</a></li>
-            <li class="nav-item" id="li-contact"><a class="nav-link" href="contact.html">Contact</a></li>
-           <li class="nav-item" id="li-employers"> <a class="nav-link" href="employers.html">Recruiters/Employers</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">
+                    <img src="assets/images/menu.png" id="menu">
+                </span>
+            </button>        
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav" >
+                <li class="nav-item mx-4 active" id="li-about"><a class="nav-link" href="index.html">About Me</a></li>
+                <li class="nav-item mx-4" id="li-skills"><a class="nav-link" href="skills.html">Skills</a></li>
+                <li class="nav-item mx-4" id="li-projects"><a class="nav-link" href="projects.html">Projects</a></li>
+                <li class="nav-item mx-4" id="li-contact"><a class="nav-link" href="contact.html">Contact</a></li>
+                <li class="nav-item mx-4" id="li-employers"> <a class="nav-link" href="employers.html">Recruiters/Employers</a></li>
+            </ul>
+        </div>
     </nav>
     
 
     <div id="contact">
-        <h3>Contact Me!</h3>
+        <h3>Contact Me</h3>
+
+        <h4>Feel free to send me an email at <a href="mailto:matthew.howard96@yahoo.com" target="_blank">matthew.howard96@yahoo.com</a></h4>
+        <h4><a target="_blank" href="https://www.linkedin.com/in/matthew-howard310/">Visit my LinkedIn</a></h4>
+        <h4><a target="_blank" href="https://github.com/poweredhoward">Check out my Github profile</a></h4>
     </div>
 
 
