--- a/employers.html
+++ b/employers.html
@@ -20,13 +20,21 @@
 <body>
     <!-- <a href="#nav"><button>Enter Site</button></a> -->
 
-    <nav id="nav" class="sticky-top">
-        <ul class="nav">
-            <li class="nav-item" id="li-about"><a class="nav-link" href="index.html">About Me</a></li>
-            <li class="nav-item" id="li-projects"><a class="nav-link" href="projects.html">Projects</a></li>
-            <li class="nav-item" id="li-contact"><a class="nav-link" href="contact.html">Contact</a></li>
-           <li class="nav-item" id="li-employers"> <a class="nav-link" href="employers.html">Recruiters/Employers</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">
+                    <img src="assets/images/menu.png" id="menu">
+                </span>
+            </button>        
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav" >
+                <li class="nav-item mx-4 active" id="li-about"><a class="nav-link" href="index.html">About Me</a></li>
+                <li class="nav-item mx-4" id="li-skills"><a class="nav-link" href="skills.html">Skills</a></li>
+                <li class="nav-item mx-4" id="li-projects"><a class="nav-link" href="projects.html">Projects</a></li>
+                <li class="nav-item mx-4" id="li-contact"><a class="nav-link" href="contact.html">Contact</a></li>
+                <li class="nav-item mx-4" id="li-employers"> <a class="nav-link" href="employers.html">Recruiters/Employers</a></li>
+            </ul>
+        </div>
     </nav>
 
 
