--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg sticky-top" id="nav">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">
                     <img src="assets/images/menu.png" id="menu">
@@ -27,7 +27,7 @@
             </button>        
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav" >
-                <li class="nav-item mx-4 active" id="li-about"><a class="nav-link" href="index.html">About Me</a></li>
+                <li class="nav-item mx-5 active" id="li-about"><a class="nav-link" href="index.html">About Me</a></li>
                 <li class="nav-item mx-4" id="li-skills"><a class="nav-link" href="skills.html">Skills</a></li>
                 <li class="nav-item mx-4" id="li-projects"><a class="nav-link" href="projects.html">Projects</a></li>
                 <li class="nav-item mx-4" id="li-contact"><a class="nav-link" href="contact.html">Contact</a></li>
