--- a/skills.html
+++ b/skills.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg sticky-top" id="nav">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon">
                         <img src="assets/images/menu.png" id="menu">
